--- a/lms/static/sass/partials/lms/theme/_variables.scss
+++ b/lms/static/sass/partials/lms/theme/_variables.scss
@@ -1,5 +1,5 @@
-$primary: #15376D;
-$primary-light: #F2F7F8;
+$primary: #e84235;
+$primary-light: #ece8ec;
 
 // Theme fonts
 $font-family-title: 'Inter', sans-serif;;
@@ -9,5 +9,5 @@ $f-sans-serif: Crimson, 'Open Sans','Helvetica Neue', Helvetica, Arial, sans-ser
 // Initialize the Open edX Bootstrap theme
 @import 'edx-bootstrap/sass/open-edx/theme';
 
-$drak: #111827;
-$light-drak: #374151;
+$drak: #601110;
+$light-drak: #ac1918;
