--- a/lms/static/sass/dashbord/_dashbord.scss
+++ b/lms/static/sass/dashbord/_dashbord.scss
@@ -3,9 +3,9 @@
     padding: 0 !important;
     margin: 0 !important;
     max-width: 100%;
-    @include media-breakpoint-up(lg) {
-        margin-top: 64px !important;
-    }
+    //@include media-breakpoint-up(lg) {
+    //    margin-top: 64px !important;
+    //}
 }
 .sidebar-notification.add {
     background: #FFFBEB;
